Summary: Complete setup steps; started on Single node outline
Changesets:
- Added screenshots for Hashi-UI, Nomad Client Java Driver
- Correct README
- Completed the setup with Consul, Nomad, Hashi-UI setup and confirmation
- Include confirmation there is correct Java Driver for Nomad client
- Describe how to serve up the artifact for ES
- Outline for porting over the startup script
- Outline for porting over the java configs
- Outline for gotcha for memory usage